MIFOSX-1575 Add optional 'comments' parameter to Journal Reverse command

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -30807,6 +30807,15 @@ GET https://DomainName/api/v1/journalentries/{entryId}
 						</dd>
 						<dd>'reverse' : Reverse the Journal Entry</dd>
 					</dl>
+                    <h5>Optional Arguments</h5>
+                    <dl class="argument-list">
+                        <dt>comments</dt>
+                        <dd>
+                            String <span>optional</span>
+                        </dd>
+                        <dd>Optional string to be applied as a comment for the created reversal entry,
+                        default comment is used if this field is not supplied</dd>
+                    </dl>
                 </div>
                 <div class="method-example">
                     <code class="method-declaration">
