MIFOSX-1630 Bit and DateTime data type support in DataTable API

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -26800,7 +26800,9 @@ No Request Body:
                             <td class=fielddesc>
                                 Column type. Must be one of the following:
                                 <ul class="field">
+                                    <li>Boolean</li>
                                     <li>Date</li>
+                                    <li>DateTime</li>
                                     <li>Decimal</li>
                                     <li>Dropdown</li>
                                     <li>Number</li>
@@ -27110,7 +27112,9 @@ GET https://DomainName/api/v1/datatables/{datatable}
                             <td class=fielddesc>
                                 Column type. Must be one of the following:
                                 <ul class="field">
+                                    <li>Boolean</li>
                                     <li>Date</li>
+                                    <li>DateTime</li>
                                     <li>Decimal</li>
                                     <li>Dropdown</li>
                                     <li>Number</li>
