MIFOSX-1717,MIFOSX-1662 Test case for account number preferences and Code Refactoring for Client status.

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -3567,7 +3567,7 @@ Request Body:
 					<td><div class="mifosXHeading2">Mandatory Fields</div></td>
 				</tr>
 				<tr class=alt>
-					<td>rejectDate, rejectReasonId<br>
+					<td>rejectionDate, rejectionReasonId<br>
 					</td>
 				</tr>
 			</table>
@@ -3579,8 +3579,8 @@ Request Body:
 Content-Type: application/json
 Request Body:
 {
-"rejectDate":"28 November 2014",
-"rejectReasonId":16,
+"rejectionDate":"28 November 2014",
+"rejectionReasonId":16,
 "locale":"en",
 "dateFormat":"dd MMMM yyyy"
 }			
@@ -3605,7 +3605,7 @@ Request Body:
 					<td><div class="mifosXHeading2">Mandatory Fields</div></td>
 				</tr>
 				<tr class=alt>
-					<td>withdrawDate, withdrawReasonId<br>
+					<td>withdrawalDate, withdrawalReasonId<br>
 					</td>
 				</tr>
 			</table>
@@ -3616,8 +3616,8 @@ Request Body:
 Content-Type: application/json
 Request Body:
 {
-"withdrawDate":"28 November 2014",
-"withdrawReasonId":17,
+"withdrawalDate":"28 November 2014",
+"withdrawalReasonId":17,
 "locale":"en",
 "dateFormat":"dd MMMM yyyy"
 }			
